test/should-fail/vsgc4173b.f3
/**
 * Regress test for VSGC-4173.
 *
 *  Improved support for forward references
 *
 * @compilearg -XDfwdRefOpt=oninvalidate
 * @compile vsgc4173sub.f3
 * @test/warning
 */
